04-image-registry/.test/configs.yaml
# ConfigMaps used by the image registry policies
#
# public-registry-mapping: Maps public registries to their private ECR pull-through
# cache equivalents. Update the registry ID and region to match your environment.
#
# cluster-config: Contains the cluster's AWS region, used by the ECR cross-region
# policy to determine whether an image needs to be rewritten.
---
apiVersion: v1
kind: ConfigMap
metadata:
  labels:
    cache.kyverno.io/enabled: "true"
  name: public-registry-mapping
  namespace: kube-system
data:
  index.docker.io: "000.dkr.ecr.eu-west-1.amazonaws.com/docker-hub"
  gcr.io: "000.dkr.ecr.eu-west-1.amazonaws.com/gcr"
  ghcr.io: "000.dkr.ecr.eu-west-1.amazonaws.com/github"
  public.ecr.aws: "000.dkr.ecr.eu-west-1.amazonaws.com/ecr-public"
  quay.io: "000.dkr.ecr.eu-west-1.amazonaws.com/quay"
  registry.k8s.io: "000.dkr.ecr.eu-west-1.amazonaws.com/kubernetes"
---
apiVersion: v1
kind: ConfigMap
metadata:
  labels:
    cache.kyverno.io/enabled: "true"
  name: cluster-config
  namespace: kube-system
data:
  region: "eu-west-1"
